<resources>
    <string name="app_name">LeTran_CE06</string>
    <string name="separator">:</string>
    <string name="minute_hint">min(s)</string>
    <string name="second_hint">sec(s)</string>
    <string name="start_button">START</string>
    <string name="stop_button">STOP</string>
    <string name="toast_empty_text">Please enter valid time</string>
    <string name="toast_start">Time started</string>
    <string name="alert_title">Timer Stopped</string>
    <string name="alert_pos_button">Close</string>
    <string name="empty_time">00</string>
</resources>
